<resources>
    <string name="app_name">Nutrient</string>
    <string name="email_format_not_valid">Email must be valid format!</string>
    <string name="eight_char_password">Password cannot be less than 8 characters</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nutrient_title">Nutrient</string>
    <string name="onboarding_started1">Make it easy with</string>
    <string name="onboarding_started2">Nutrition Table Assistant</string>
    <string name="get_started">Get Started</string>
    <string name="getinformation_description">Don\'t worry about the information provided by the nutrition label, you can see all the detailed information that will be calculated with your daily health status.</string>
    <string name="get_information_title">Get Information</string>
    <string name="trackwithlabel_title">Track with Label</string>
    <string name="trackwithlabel_description">You can scan the nutrition label to see the detailed information on the package. Get some nutrition like Calories, Carbo, Protein, and Fat</string>
    <string name="connectBMI_description">Connect your BMI so that you can know the nutrition obtained from the packaged food or drinks that you will consume every day.</string>
    <string name="connectBMI_title">Connect Your BMI</string>
    <string name="sign_in">Sign In</string>
    <string name="email_title">EMAIL</string>
    <string name="ph_email">Type your email</string>
    <string name="password">PASSWORD</string>
    <string name="ph_password">Type your password</string>
    <string name="register_here">Register here</string>
    <string name="create_account">Create an Account</string>
    <string name="username">USERNAME</string>
    <string name="ph_username">Type your username</string>
    <string name="gender">GENDER</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="ph_dateOfBirth">Type your date of birth</string>
    <string name="verify_through_email">VERIFY THROUGH EMAIL</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="ph_retypePassword">Retype your password</string>
    <string name="register_account">Register Account</string>
    <string name="back_to_login">Back to Login</string>
    <string name="self_assesment">Fill out the Self Assesment</string>
    <string name="height_cm">HEIGHT (CM)</string>
    <string name="ph_height">Type your height</string>
    <string name="weight_kg">WEIGHT (KG)</string>
    <string name="ph_weight">Type your weight</string>
    <string name="next_to_assesment">NEXT</string>
    <string name="homeBotNav">Home</string>
    <string name="historyBotNav">History</string>
    <string name="newsBotNav">News</string>
    <string name="profileBotNav">Profile</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="search_food_amp_bev"><![CDATA[Search Food & Bev]]></string>
    <string name="product_information">Product Information</string>
    <string name="bmi_information">BMI Information</string>
    <string name="weight">Weight : %1$s kg</string>
    <string name="height">Height : %1$s cm</string>
    <string name="status">Status :</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_apps">About Apps</string>
    <string name="settings">Settings</string>
    <string name="personal_data">Personal Data</string>
    <string name="age">Age</string>
    <string name="years_old">%1$d yo</string>
    <string name="weight_normal">Weight</string>
    <string name="kilo_gram">%1$d kg</string>
    <string name="height_normal">Height</string>
    <string name="centi_meter">%1$d cm</string>
    <string name="account_name">MD11 Account</string>
    <string name="profile_layout">Profile</string>
    <string name="logout_session">Logout Session</string>
    <string name="title_custom_logout">Are you sure want to sign out account?</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>
    <string name="what_news">What\'s News?</string>
    <string name="bmi_information_title">BMI Information</string>
    <string name="articlesTitle">Articles Title</string>
    <string name="nutrition_information_title">Nutrition Information</string>
    <string name="search_articles">Search Articles</string>
    <string name="articlesDescription">Description</string>
    <string name="articlesReleaseDate">Released Date</string>
    <string name="history">History</string>
    <string name="ph_gender">Male/Female</string>
    <string name="heightTitle">HEIGHT</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="save_changes">Save Changes</string>
    <string name="title_custom_confirmation">Are you sure want to change your profile information?</string>
    <string name="yes_confirmation">Yes</string>
    <string name="loading">Loading…</string>
    <string name="success">Success</string>
    <string name="account_created">Account has been created, Please login</string>
    <string name="alright">Alright</string>
    <string name="information_log">Information Log</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="food_and_beverage">FOOD AND BEVERAGE</string>
    <string name="glucose">GLUCOSE</string>
    <string name="carbo">CARBO</string>
    <string name="ph_food_and_bev">Type your food or beverage</string>
    <string name="protein">PROTEIN</string>
    <string name="fat">FAT</string>
    <string name="consumptiontime">Consumption Time</string>
    <string name="caloriestotal">Calories Total:</string>
    <string name="save_history">SAVE HISTORY</string>
    <string name="nutrition_scan">Nutrition Scan</string>
    <string name="failure_title">Oops, Something Went Wrong</string>
    <string name="tv_failure_description">Sorry there was an error when scanning the label, don\'t worry you can fill in the nutritional information manually or repeat the label scan!</string>
    <string name="fill_manual">Fill Manual</string>
    <string name="scan_again">Scan Again</string>
    <string name="manual_form">Manual Form</string>
    <string name="portion">PORTION</string>
    <string name="serving">SERVING (GRAM)</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="before_register">Don\'t have an account?</string>
    <string name="before_back_to_login">Already have an account?</string>
    <string name="done">DONE</string>
    <string name="descriptionProduct">Description Product</string>
    <string name="nutritionProduct">Nutrition Product</string>
    <string name="info_fnb">The information on food and beverages listed here is the result of the circulation of food and beverages in the country of Indonesia.</string>
    <string name="product_title">Product Title</string>
    <string name="scan_label">Scan Your Label</string>
    <string name="scan">Scan</string>
    <string name="gallery">Gallery</string>
    <string name="flashlight">Flashlight</string>
    <string name="flashlight_on">Flashlight On</string>
    <string name="flashlight_off">Flashlight Off</string>
    <string name="load_your_profile">Load your profile...</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dummyUsername">MD-11</string>
    <string name="daily_nutrition">Daily Nutrition</string>
    <string name="calori_title">Calori: %1$s</string>
    <string name="dummyCurrentCal">2050</string>
    <string name="slash">/</string>
    <string name="dummyTargetCal">2700</string>
    <string name="dummyPercentage">75</string>
    <string name="percentage">%</string>
    <string name="sugarTitle">Sugar</string>
    <string name="gram">g</string>
    <string name="dummyCurrentSugar">7</string>
    <string name="proteinTitle">Protein: %1$s</string>
    <string name="currentProtein">20</string>
    <string name="fatTitle">Fat: %1$s</string>
    <string name="currentFat">15</string>
    <string name="carboTitle">Carbo: %1$s</string>
    <string name="dummyValueCarbo">30</string>
    <string name="about_nutrient">About Nutrient</string>
    <string name="descriptionNutrientAbout">Welcome to Nutrient, your personal nutrition table assistant designed to promote a healthier lifestyle and well-being for the people of Indonesia. Inspired by the dietary habits and health challenges faced by many Indonesians, our application aims to empower users to make informed dietary choices and adopt a healthier lifestyle.</string>
    <string name="our_mission">Our Mission</string>
    <string name="descriptionMissionAbout">Nutrient was developed as part of our capstone project under the theme Health Innovation: Empowering Vulnerable Communities for Health and Well-being. Our mission is to enhance the health consciousness of Indonesians by providing them with valuable insights into the nutritional content of their food and beverages.</string>
    <string name="key_features">Key Features</string>
    <string name="keyFeatures1">* Encouraging mindful eating habits.</string>
    <string name="keyFeatures2">* Providing easy access to accurate nutritional information.</string>
    <string name="keyFeatures3">* Offering personalized health insights based on your BMI.</string>
    <string name="KeyFeatures4">* Empowering users to make healthier dietary choices.</string>
    <string name="join_us_on_the_journey_to_better_health">Join Us on the Journey to Better Health</string>
    <string name="joinUsAboutUs">By using Nutrient, you\'re taking a significant step towards improving your health and well-being. Our team is committed to continuously updating and enhancing the app to better serve your needs. Together, we can build a healthier community in Indonesia.</string>
    <string name="bottomsheet">Bottom Sheet</string>
    <string name="personalInformation">Data Personalization</string>
    <string name="change_password">Change Password</string>
    <string name="food_and_beverage_history">Food &amp; Bev History</string>
    <string name="changeLanguage">Change Language</string>
    <string name="appsInformation">Apps Information</string>
    <string name="descChangePassword">Your new password must contains at least 8 characters or more than 8 characters</string>
    <string name="ph_newpassword">Type your new password</string>
    <string name="ph_retypeNewPassword">Retpe your new password</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesia</string>
    <string name="descriptionChangeLanguage">You can choose any language that you want to apply on your Nutrient Application</string>
    <string name="protein_home">Protein</string>
    <string name="fat_home">Fat</string>
    <string name="carbo_home">Carbo</string>
    <string name="calori_home">Calori</string>
    <string name="skipInformation"><u>Skip Information</u></string>
    <string name="cameraDesc">Make sure to point the camera correctly and center the nutrition label of the food or drink you have</string>
    <string name="bmiTerms"><u>BMI Terms</u>></string>
    <string name="metric_measurements">Metric Measurements</string>
    <string name="whoBMI">According to WHO, the standard categories of men\'s and women’s ideal weight based on BMI are:</string>
    <string name="categoryBMI1">- Less than 18.5 signifies underweight.</string>
    <string name="categoryBMI2">- Between 18.5 and 24.9 signifies normal weight.</string>
    <string name="categoryBMI3">- Between 25 and 29.9 signifies overweight.</string>
    <string name="categoryBMI4">- Above 30 signifies obesity</string>
    <string name="formulaBMI">Formula:\n [Body Weight (kg) : {Body Height (m) x Body Height (m))]</string>
</resources>