<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    android:paddingVertical="25dp"
    android:background="@drawable/rounded_profile_information"
    android:layout_marginTop="8dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:textSize="16sp"
        tools:text="Item brand" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/searchSugarDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/sugarTitle"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/searchProteinDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/proteinTitle"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/searchFatDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/fatTitle"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/searchCarboDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/carboTitle"
            android:textSize="12sp" />

    </LinearLayout>


</LinearLayout>