<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/backnavs"/>

        <TextView
            android:id="@+id/tvPersonalData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/changeLanguage"
            android:gravity="center"
            android:textSize="18sp" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:layout_marginTop="16dp"
        android:text="@string/descriptionChangeLanguage"
        android:textAlignment="center"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:paddingStart="16dp"
            android:text="@string/english"
            android:drawableEnd="@drawable/english"
            android:gravity="center_vertical"/>

        <RadioButton
            android:id="@+id/radioIndonesia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppinsregular"
            android:paddingStart="16dp"
            android:text="@string/indonesia"
            android:drawableEnd="@drawable/indonesia"
            android:gravity="center_vertical"/>
    </RadioGroup>
</LinearLayout>
