<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".ui.fragments.detailproduct.DescriptionProductFragment"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTitleProductDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/product_title"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_info_product"
        android:padding="8dp"
        android:layout_marginBottom="16dp">
        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bx_info_circle" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/info_fnb"
            android:textSize="12sp"
            android:fontFamily="@font/poppinsregular"/>
    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvDesciptionProductDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:fontFamily="@font/poppinsregular"
        android:gravity="start"
        android:text="@string/descriptionProduct"
        android:textAlignment="textStart" />

</LinearLayout>